--- a/contactos.html
+++ b/contactos.html
@@ -42,7 +42,7 @@ background: linear-gradient(to right, #FFFDE4, #005AA7); /* W3C, IE 10+/ Edge, F
         <a class="nav-link" href="index.html">Inicio<span class="sr-only">(current)</span></a>
       </li>
        <li class="nav-item">
-        <a class="nav-link" href="videos.html">Chat en Vivo!</a>
+        <a class="nav-link" href="https://chat-clavelsoft.herokuapp.com">Chat en Vivo!</a>
       </li>
        <li class="nav-item">
         <a class="nav-link" href="juego.html">JUEGO</a>
@@ -184,7 +184,7 @@ else
  <center><div class="spinner-border text-danger">
     <div>Chat</div>
 </div></center>
-<button type="button" class="btn btn-secondary btn-lg btn-block">"CHAT Interactivo ClavelSoft"</button>
+<button type="button" class="btn btn-secondary btn-lg btn-block" href="https://chat-clavelsoft.herokuapp.com">"CHAT Interactivo ClavelSoft"</button>
  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
